Dockerize the test